# quad-sdk

./: .gitignore  README.md  start_icra.sh
global_body_planner/: global_body_planner.yaml  global_body_planner1.yaml  global_body_planner2.yaml  global_body_planner3.yaml  global_body_planner4.yaml  global_body_planner5.yaml  global_body_planner_gallop.yaml
global_body_planner/src/: global_body_planner.cpp
local_planner/: local_planner1.yaml  local_planner2.yaml  local_planner4.yaml  local_planner_gallop.yaml
local_planner/src/: local_footstep_planner.cpp  local_planner.cpp
nmpc_controller/src/: nmpc_controller.cpp
offline_global_body_planner/: README.md  offline_global_body_planner.yaml  package.xml
offline_global_body_planner/data/: ctrl_traj-rad-3-Q-10-R-100-Q_bs-10-R_bs-10_gaussian.csv  ctrl_traj-rad-3-Q-10-R-1000.csv  ctrl_traj.csv  ctrl_traj_2.csv  ctrl_traj_3_obs.csv  ctrl_traj_4_obs.csv  ctrl_traj_demo.csv  ctrl_traj_obs.csv  states_traj-rad-3-Q-10-R-100-Q_bs-10-R_bs-10_gaussian.csv  states_traj-rad-3-Q-10-R-1000.csv  states_traj.csv  states_traj_2.csv  states_traj_3_obs.csv  states_traj_4_obs.csv  states_traj_demo.csv  states_traj_obs.csv
offline_global_body_planner/data/testDir/: foot_plan_continuous.txt  foot_plan_discrete.txt  global_plan.txt  global_plan_gap_20cm.txt  global_plan_slope.txt  go1_global_plan.txt  local_plan.txt  offl_2_robot_plan_4_1.txt  offl_robot_plan.txt  offl_robot_plan_4_1.txt  robot_desc.txt  spirit_tf.txt
offline_global_body_planner/include/offline_global_body_planner/: offline_global_body_plan.h  offline_global_body_planner.h  offline_global_body_planner_2.h  offline_planning_utils.h
offline_global_body_planner/src/: offline_global_body_plan.cpp  offline_global_body_planner.cpp  offline_planning_utils.cpp
tail_controller/: tail_controller.yaml
(+98 files in other folders)
